<resources>
    <string name="app_name">Project2_FeedStore</string>
    <string name="user_login">Login</string>
    <string name="welcome_to_the_feed_store">Welcome to The Feed Store!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="please_enter_username_and_password">Please Enter Username and Password!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="user">USER</string>
    <string name="USER">USER</string>
    <string name="create_account">Create Account</string>
    <string name="please_create_an_account_friend">Please Create An Account , Friend!</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>

</resources>